include/C/ox/oxexport.h

BOOL	OXCALL	FOxRun(int iMainIP, char *sFunc);
BOOL	OXCALL	FOxSetDataMember(OxVALUE *pvClass, const char *sMember, OxVALUE *pv);
int 	OXCALL	IOxRunInit(void);
int 	OXCALL	IOxVersion(void);
int  	OXCALL  IOxVersionIsProfessional(void);
int 	OXCALL	IOxVersionOxo(void);
void 	OXCALL  OxCloneObject(OxVALUE *rtn, OxVALUE *pvObject, BOOL bDeep);
void	OXCALL	OxDeleteObject(OxVALUE *pvClass);
void	OXCALL	OxFnDouble(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double) );
void	OXCALL	OxFnDouble2(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double) );
void	OXCALL	OxFnDouble3(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double,double) );
void	OXCALL	OxFnDouble4(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double,double,double) );
void	OXCALL	OxFnDoubleInt(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,int) );
void 	OXCALL 	OxFnDoubleVec(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double), int iVecAt);
void 	OXCALL 	OxFnDouble2Vec(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double), int iVecAt);
void 	OXCALL 	OxFnDouble3Vec(OxVALUE *rtn, OxVALUE *pv, double (OXCALL * fn)(double,double,double), int iVecAt);
void	OXCALL	OxFreeByValue(OxVALUE *pv);
void	OXCALL	OxGetMainArgs(int *pcArgc, char ***pasArgv);
void	OXCALL	OxGetOxArgs(int *pcArgc, char ***pasArgv);
int 	OXCALL	OxGetPrintlevel(void);
int 	OXCALL 	OxGetUserExitCode(void);
void	OXCALL	OxLibArgError(int iArg);
void	OXCALL	OxLibArgTypeError(int iArg, int iExpected, int iFound);
void	OXCALL	OxLibCheckArrayMatrix(OxVALUE *pv, int iFirst, int iLast, MATRIX m);
void	OXCALL	OxLibCheckMatrixSize(OxVALUE *pv, int iFirst, int iLast, int r, int c);
void	OXCALL	OxLibCheckSquareMatrix(OxVALUE *pv, int iFirst, int iLast);
void	OXCALL	OxLibCheckType(int iType, OxVALUE *pv, int iFirst, int iLast);
void	OXCALL	OxLibValArrayCalloc(OxVALUE *pv, int c);
void	OXCALL	OxLibValMatDup(OxVALUE *pv, MATRIX mSrc, int r, int c);
void	OXCALL	OxLibValMatMalloc(OxVALUE *pv, int r, int c);
void	OXCALL	OxLibValStrMalloc(OxVALUE *pv, int c);
int 	OXCALL	OxMain(int argc, char *argv[]);
int 	OXCALL	OxMain_T(int argc, TCHAR *argv[]);
int 	OXCALL	OxMainCmd(const char *sCommand);
void	OXCALL	OxMainExit(void);
void	OXCALL	OxMainInit(void);
void	OXCALL	OxMakeByValue(OxVALUE *pv);
void	OXCALL	OxMessage(char *s);
void	OXCALL	OxPuts(char *s);
void	OXCALL	OxRunAbort(int i);
void	OXCALL	OxRunError(int iErno, char *sToken);
void	OXCALL	OxRunErrorMessage(char *s);
void	OXCALL	OxRunExit(void);
void	OXCALL	OxRunMainExitCall(void (OXCALL * fn)(void));
void	OXCALL	OxRunMessage(char *s);
void	OXCALL	OxRunWarningMessage(char *sFunc, char *sMsg);
void	OXCALL	OxSetMainArgs(int argc, char *argv[]);
void	OXCALL	OxSetOxArgs(int cArgc, char **asArgv);
void	OXCALL	OxSetPrintlevel(int iSet);
void 	OXCALL 	OxSetUserExitCode(int iError);
OxVALUE *OXCALL OxStoreCreate(int c);
void 	OXCALL  OxStoreDelete(OxVALUE *pv, int c);
int 	OXCALL	OxValColumns(OxVALUE *pv);
void 	OXCALL  OxValDuplicate2(OxVALUE *pvDest, OxVALUE *pvSrc);
OxVALUE *OXCALL	OxValGetArray(OxVALUE *pv);
int		OXCALL	OxValGetArrayLen(OxVALUE *pv);
OxVALUE *OXCALL	OxValGetArrayVal(OxVALUE *pv, int i);
void * 	OXCALL  OxValGetBlob(OxVALUE *pv, int *pI1, int *pI2);
const char * OXCALL OxValGetClassName(OxVALUE *pv);
BOOL	OXCALL	OxValGetDouble(OxVALUE *pv, double *pdVal);
BOOL	OXCALL	OxValGetInt(OxVALUE *pv, int *piVal);
MATRIX	OXCALL	OxValGetMat(OxVALUE *pv);
int		OXCALL	OxValGetMatc(OxVALUE *pv);
int		OXCALL	OxValGetMatr(OxVALUE *pv);
int		OXCALL	OxValGetMatrc(OxVALUE *pv);
char *	OXCALL	OxValGetString(OxVALUE *pv);
BOOL	OXCALL	OxValGetStringCopy(OxVALUE *pv, char *s, int mxLen);
int		OXCALL	OxValGetStringLen(OxVALUE *pv);
BOOL 	OXCALL  OxValGetVecc(OxVALUE *pv, VECTOR vX);
OxVALUE *OXCALL	OxValGetVal(OxVALUE *pv, int i);
OxVALUE *OXCALL OxValGetStaticObject(OxVALUE *pv);
void	OXCALL	SetOxDataWindow(int (OXCALL * pfnNewOxDataWindow)(const char *, const char *) );
void	OXCALL	SetOxExit(void (OXCALL * pfnNewOxExit)(int) );