include/C/ox/jdmatrix.h

/* jdstdlib.c */
MATRIX JDCALL MatCpy(MATRIX mDest, MATRIX mSrc, int cR, int cC);
MATRIX JDCALL MatCopy(MATRIX mDest, MATRIX mSrc, int cR, int cC);
void   JDCALL MatCopyVecr(MATRIX mX, VECTOR vY, int cR, int cC);
void   JDCALL MatCopyVecc(MATRIX mX, VECTOR vY, int cR, int cC);
void   JDCALL MatSetAt(MATRIX mX, double d, int i, int j);
double JDCALL MatGetAt(MATRIX mX, int i, int j);
MATRIX JDCALL MatDup(MATRIX mSrc, int cR, int cC);
MATRIX JDCALL MatI(MATRIX mX, int cX);
MATRIX JDCALL MatZero(MATRIX mX, int cR, int cC);
MATRIX JDCALL MatNaN(MATRIX mX, int cR, int cC);
MATRIX JDCALL MatAllocBlock(int cR, int cC);
void   JDCALL MatFreeBlock(MATRIX mX);
INTMAT JDCALL IntMatAllocBlock(int r, int c);
void   JDCALL IntMatFreeBlock(INTMAT mat);