include/C/ox/Ox.java


	public static native int FOxRun(int iMainIP, String sFunc);
	public static native int FOxSetDataMember(Pointer pvClass, String sMember, Pointer pv);
	public static native int FPeriodogram(double[] vX, int cT, int iTrunc, int cS, double[] vS, int iMode);
	public static native int FPeriodogramAcf(double[] vAcf, int cT, int iTrunc, int cS, double[] vS, int iMode, int cTwin);
	public static native int FPPtDec(Pointer MATRIX1, int int1);
	public static native double Hyper_2F1(double a, double b, double c, double z);
	public static native int IDecQRt(Pointer mXt, int cX, int cT, int[] piPiv, IntByReference pcR);
	public static native int IDecQRtEx(Pointer mXt, int cX, int cT, int[] piPiv, double[] vTau);
	public static native int IDecQRtRank(Pointer mXt, int cX, int cT, IntByReference pcR);
	public static native int IDecSVD(Pointer mA, int cM, int cN, double[] vW, int fDoU, Pointer mU, int fDoV, Pointer mV, int fSort);
	public static native int IDenest(double[] doublePtr1, int int1, double double1, double double2, double double3, double double4, double double5, double[] doublePtr2, double[] doublePtr3, int int2, int int3);
	public static native int IEigen(Pointer mA, int cA, double[] vRe, double[] vIm, Pointer mEvec);
	public static native int IEigenSym(Pointer mA, int cA, double[] vEval, int fDoVectors);
	public static native int IEigValPoly(double[] vPoly, double[] evr, double[] evi, int dim);
	public static native int IEigValReal(Pointer MATRIX1, double[] VECTOR1, double[] VECTOR2, int int1);
	public static native int IEigValSym(Pointer MATRIX1, double[] VECTOR1, int int1);
	public static native int IEigVecReal(Pointer MATRIX1, double[] VECTOR1, double[] VECTOR2, int int1);
	public static native int IEigVecSym(Pointer MATRIX1, double[] VECTOR1, int int1);
	public static native int IGenEigVecSym(Pointer MATRIX1, Pointer MATRIX2, double[] VECTOR1, double[] VECTOR2, int int1);
	public static native int IGetAcf(double[] VECTOR1, int int1, int int2, double[] VECTOR2, int bCov);
	public static native int IGetAcfCross(double[] vX, double[] vY, int cT, int cLag, double[] vAcf, double[] pdAcf0);
	public static native int IGetAcfRun(double[] vX, int cT, int cLag, double[] vAcf, int bCov);
	public static native int IInvDet(Pointer mA, int cA, DoubleByReference pdLogDet, IntByReference piSignDet);
	public static native int IInvert(Pointer MATRIX1, int int1);
	public static native int ILDLbandDec(Pointer MATRIX1, double[] VECTOR1, int int1, int int2);
	public static native int ILDLdec(Pointer MATRIX1, double[] VECTOR1, int int1);
	public static native int ILUPdec(Pointer mA, int cA, int[] piPiv, DoubleByReference pdLogDet, IntByReference piSignDet, Pointer mUt);
	public static native int ILUPlogdet(Pointer mU, int cA, int[] piPiv, double dNormEps, DoubleByReference pdLogDet);
	public static native int IMatRank(Pointer mA, int cM, int cN, double dEps, int bAbsolute);
	public static native Pointer IntMatAllocBlock(int cR, int cC);
	public static native void IntMatFreeBlock(Pointer mX);
	public static native int INullSpace(Pointer MATRIX1, int int1, int int2, int int3);
	public static native int IOlsNorm(Pointer mXt, int cX, int cT, Pointer mYt, int cY, Pointer mB, Pointer mXtXinv, Pointer mXtX, int fInRows);
	public static native int IOlsQR(Pointer mXt, int cX, int cT, Pointer mYt, int cY, Pointer mB, Pointer mXtXinv, Pointer mXtX, double[] vW);
	public static native int IOrthMGS(Pointer MATRIX1, int int1, int int2, int int3, Pointer MATRIX2);
	public static native int IOxRunInit();
	public static native int IOxVersion();
	public static native int IOxVersionIsProfessional();
	public static native int IOxVersionOxo();
	public static native int IRanBinomial(int int1, double double1);
	public static native int IRanLogarithmic(double dA);
	public static native int IRanNegBin(int iN, double dP);
	public static native int IRanPoisson(double double1);
	public static native int IRanU();
	public static native int IsDbMissing(double x);
	public static native int ISVDdec(Pointer MATRIX1, int int1, int int2, double[] VECTOR1, int int3, Pointer MATRIX2, int int4, Pointer MATRIX3, double[] VECTOR2, int int5);
	public static native int ISymInv(Pointer MATRIX1, int int1);
	public static native int ISymInvDet(Pointer mA, int cA, DoubleByReference pdLogDet);
	public static native void LDLbandSolve(Pointer MATRIX1, double[] VECTOR1, double[] VECTOR2, double[] VECTOR3, int int1, int int2);
	public static native void LDLsolve(Pointer MATRIX1, double[] VECTOR1, double[] VECTOR2, double[] VECTOR3, int int1);
	public static native void LDLsolveInv(Pointer mLDLt, Pointer mAinv, int cA);
	public static native void LUPsolve(Pointer mL, Pointer mU, int[] piPiv, double[] vB, int cA);
	public static native void LUPsolveInv(Pointer mL, Pointer mU, int[] piPiv, Pointer mAinv, int cA);
	public static native Pointer MatAB(Pointer MATRIX1, int int1, int int2, Pointer MATRIX2, int int3, Pointer MATRIX3);
	public static native Pointer MatABt(Pointer MATRIX1, int int1, int int2, Pointer MATRIX2, int int3, Pointer MATRIX3);
	public static native Pointer MatAcf(Pointer mAcf, Pointer mX, int cT, int cX, int mxLag);
	public static native Pointer MatAdd(Pointer mA, int cM, int cN, Pointer mB, double dFac, Pointer mAplusB);
	public static native Pointer MatAllocBlock(int cR, int cC);
	public static native Pointer MatAtB(Pointer MATRIX1, int int1, int int2, Pointer MATRIX2, int int3, Pointer MATRIX3);
	public static native Pointer MatBBt(Pointer mB, int rB, int cB, Pointer mBBt);
	public static native Pointer MatBSBt(Pointer MATRIX1, int int1, Pointer MATRIX2, int int2, Pointer MATRIX3);
	public static native Pointer MatBtB(Pointer mB, int rB, int cB, Pointer mBtB);
	public static native Pointer MatBtBVec(Pointer mB, int cT, int cB, double[] vY, Pointer mBtB);
	public static native Pointer MatBtSB(Pointer MATRIX1, int int1, Pointer MATRIX2, int int2, Pointer MATRIX3);
	public static native Pointer MatCopy(Pointer mDest, Pointer mSrc, int cR, int cC);
	public static native Pointer MatCopyTranspose(Pointer mB, Pointer mA, int cM, int cN);
	public static native void MatCopyVecc(Pointer mX, double[] vY, int cR, int cC);
	public static native void MatCopyVecr(Pointer mX, double[] vY, int cR, int cC);
	public static native Pointer MatCpy(Pointer mDest, Pointer mSrc, int cR, int cC);
	public static native Pointer MatDup(Pointer mSrc, int cR, int cC);
	public static native void MatFreeBlock(Pointer mX);
	public static native Pointer MatGenInvert(Pointer mA, int cM, int cN, Pointer mRes, double[] vSval);
	public static native Pointer MatGenInvertSym(Pointer mA, int cA, Pointer mRes, double[] vSval);
	public static native double MatGetAt(Pointer mX, int i, int j);
	public static native Pointer MatI(Pointer mX, int cX);
	public static native Pointer MatNaN(Pointer mX, int cR, int cC);
	public static native Pointer MatPartAcf(Pointer mPartAcf, Pointer mAcf, int cAcf, Pointer mY, int cY, DoubleByReference pdLogDet, int bFilter);
	public static native Pointer MatRan(Pointer MATRIX1, int int1, int int2);
	public static native Pointer MatRann(Pointer mA, int cR, int cC);
	public static native Pointer MatReflect(Pointer MATRIX1, int int1);
	public static native Pointer MatS1S2(Pointer MATRIX1, Pointer MATRIX2, int int1);
	public static native void MatSetAt(Pointer mX, double d, int i, int j);
	public static native Pointer MatStandardize(Pointer mXdest, Pointer mX, int cT, int cX);
	public static native Pointer MatSumOuter(Pointer mQ, Pointer mX, int cT, int cX);
	public static native Pointer MatTranspose(Pointer MATRIX1, int int1);
	public static native Pointer MatVariance(Pointer mXtX, Pointer mX, int cT, int cX, int fCorr);
	public static native Pointer MatXtXtt(Pointer mXt, int cX, int iT1, int iT2, Pointer mXtX);
	public static native Pointer MatXtZtt(Pointer mXt, int cX, int iT1, int iT2, Pointer mZt, int cZ, Pointer mXtZ);
	public static native Pointer MatXXt(Pointer mX, int iT1, int iT2, int cX, Pointer mXtX);
	public static native Pointer MatXXtVec(Pointer mX, int iT1, int iT2, int cX, double[] vY, Pointer mXtX);
	public static native Pointer MatZero(Pointer mX, int cR, int cC);
	public static native void OlsQRacc(Pointer mXt, int cX, int cT, int[] piPiv, int cR, double[] vTau, Pointer mYt, int cY, Pointer mB, Pointer mXtXinv, Pointer mXtX);
	public static native void OxCloneObject(Pointer rtn, Pointer pvObject, int bDeep);
	public static native void OxDeleteObject(Pointer pvClass);
	public static native void OxFreeByValue(Pointer pv);
	public static native void OxGetMainArgs(IntByReference pcArgc, PointerByReference pasArgv);
	public static native void OxGetOxArgs(IntByReference pcArgc, PointerByReference pasArgv);
	public static native int OxGetPrintlevel();
	public static native int OxGetUserExitCode();
	public static native void OxLibArgError(int iArg);
	public static native void OxLibArgTypeError(int iArg, int iExpected, int iFound);
	public static native void OxLibCheckArrayMatrix(Pointer pv, int iFirst, int iLast, Pointer m);
	public static native void OxLibCheckMatrixSize(Pointer pv, int iFirst, int iLast, int r, int c);
	public static native void OxLibCheckSquareMatrix(Pointer pv, int iFirst, int iLast);
	public static native void OxLibCheckType(int iType, Pointer pv, int iFirst, int iLast);
	public static native void OxLibValArrayCalloc(Pointer pv, int c);
	public static native void OxLibValMatDup(Pointer pv, Pointer mSrc, int r, int c);
	public static native void OxLibValMatMalloc(Pointer pv, int r, int c);
	public static native void OxLibValStrMalloc(Pointer pv, int c);
	public static native int OxMain(int argc, PointerByReference argv);
	public static native int OxMain_T(int argc, PointerByReference argv);
	public static native int OxMainCmd(String sCommand);
	public static native void OxMainExit();
	public static native void OxMainInit();
	public static native void OxMakeByValue(Pointer pv);
	public static native void OxMessage(String s);
	public static native void OxPuts(String s);
	public static native void OxRunAbort(int i);
	public static native void OxRunError(int iErno, String sToken);
	public static native void OxRunErrorMessage(String s);
	public static native void OxRunExit();
	public static native void OxRunMessage(String s);
	public static native void OxRunWarningMessage(String sFunc, String sMsg);
	public static native void OxSetMainArgs(int argc, PointerByReference argv);
	public static native void OxSetOxArgs(int cArgc, PointerByReference asArgv);
	public static native void OxSetPrintlevel(int iSet);
	public static native void OxSetUserExitCode(int iError);
	public static native Pointer OxStoreCreate(int c);
	public static native void OxStoreDelete(Pointer pv, int c);
	public static native int OxValColumns(Pointer pv);
	public static native void OxValDuplicate2(Pointer pvDest, Pointer pvSrc);
	public static native Pointer OxValGetArray(Pointer pv);
	public static native int OxValGetArrayLen(Pointer pv);
	public static native Pointer OxValGetArrayVal(Pointer pv, int i);
	public static native Pointer OxValGetBlob(Pointer pv, IntByReference pI1, IntByReference pI2);
	public static native Pointer OxValGetClassName(Pointer pv);
	public static native int OxValGetDouble(Pointer pv, DoubleByReference pdVal);
	public static native int OxValGetInt(Pointer pv, IntByReference piVal);
	public static native Pointer OxValGetMat(Pointer pv);
	public static native int OxValGetMatc(Pointer pv);
	public static native int OxValGetMatr(Pointer pv);
	public static native int OxValGetMatrc(Pointer pv);
	public static native Pointer OxValGetStaticObject(Pointer pv);
	public static native Pointer OxValGetString(Pointer pv);
	public static native int OxValGetStringCopy(Pointer pv, byte[] s, int mxLen);
	public static native int OxValGetStringLen(Pointer pv);
	public static native Pointer OxValGetVal(Pointer pv, int i);
	public static native int OxValGetVecc(Pointer pv, double[] vX);
